fix: spacing of hero, about contact etc

--- a/src/components/SelectedWork/Tax/TaxExamples/TaxExamples.module.css
+++ b/src/components/SelectedWork/Tax/TaxExamples/TaxExamples.module.css
@@ -29,7 +29,7 @@ flex-direction: row;
 
 /* bottom picture  */
 .browse {
-    width: 75%;
+    width: 60%;
 
     
 }
