--- a/src/components/sections/Hero/Contact/Contact.module.css
+++ b/src/components/sections/Hero/Contact/Contact.module.css
@@ -3,7 +3,7 @@
 .frameParent {
   width: 100%;
   max-width: 1000px; 
-  margin: 0 auto; 
+  margin: 2.5% auto; 
   display: flex;
   justify-content: space-between; 
   align-items: center;
