--- a/src/components/sections/Hero/Hero.module.css
+++ b/src/components/sections/Hero/Hero.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   gap: 3.75rem;
   /* 60px */
-  padding-bottom: 1.25rem;
+  margin: auto;
   /* 20px */
   width: 100%;
 }
@@ -18,9 +18,9 @@
   position: relative;
   background-color: none;
   /* Crucial for absolutely positioning the pseudo-element */
-  width: 8rem;
+  width: 100%;
   /* Define the base size */
-  height: 8rem;
+  height: 100%;
   /* Define the base size */
   /* This ensures the image and its background element are properly sized */
 }
@@ -41,7 +41,8 @@
 /* The magic for the offset background happens here with ::before */
 .backgroundImage {
   position: absolute;
-
+width: 100%;
+height: 100%;
   top: 0;
   left: 0;
   transform: rotate(-14deg);
@@ -78,7 +79,7 @@ gap: 6rem;
   	font-size: 24px;
   	font-weight: 800;
   	font-family: Zain;
-  	color: #4d4d4d;
+    color: var(--color-text); 
   	text-align: center;
     margin: 0;
 }
@@ -126,10 +127,12 @@ gap: 6rem;
   line-height: 1.6;
   font-weight: 400;
   /* THE FIX: Constrain the width */
-  max-width: 600px;
+  max-width: 27.5%;
   /* Optional: Align text left for better paragraph readability */
   text-align: left;
 }
 
 
-
+.years{
+  font-weight: 800;
+}
